Fixed marker info window on small screen (#88)

--- a/web_google_maps/static/src/scss/web_maps.scss
+++ b/web_google_maps/static/src/scss/web_maps.scss
@@ -17,6 +17,10 @@
 
     .o_map_view {
         width: 100%;
+
+        .gm-style-iw {
+            min-width: 300px;
+        }
     }
 
     .o_map_left_sidenav {
